# roaring-haskell

./: .gitignore  LICENSE  README.md  TODOs.md  package.yaml  roaring-haskell.cabal  stack.yaml
src/Data/: Core.hs  Dense.hs  Run.hs  Sparse.hs
